# skeletopyze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_wrapper.sh  meta.yaml  setup.py
modules/: CMakeLists.txt
python/: CMakeLists.txt  iterators.h  logging.cpp  logging.h  skeletopyze.cpp
skeletopyze/: __init__.py
test/: test_conda_install.sh
